fix: elements overflow

--- a/src/components/skills/Skills.module.scss
+++ b/src/components/skills/Skills.module.scss
@@ -7,6 +7,8 @@
     @include displayFlex(flex-start, center, column, wrap);
     @include commonContainer();
 
+    overflow: hidden;
+
     .innerContent {
         @include displayFlex(space-evenly, $flexWrap: wrap);
         gap: 3rem;
